version 20080703_1
Added the ability to use colons to allow for some of the simpler page
actions.  For example, http://www.pageoftext.com/test_page:edit will
take you to an editing page now.  If you are not using mod_rewrite, then
that URL would look like this http://www.yourwikisite.com/?test_page:edit
with the question mark.  If you are using mod_rewrite then you should note
the addition of the \\: in the Apache configuration RewriteRule.

version 20080630_1
Added the page name to the page titles.  Easier to see which page is
which when you have multiple tabs open in your browser, or when reviewing
your browser history.

version 20080619_2
Changes to the selenium test file:
Starting up and shutting down the browser after ~20 tests appears to
speed the tests up overall.  There is some speculation about why at
http://citechnology.blogspot.com/2007/11/improving-selenium-performance-in-ie6.html
All I know is that for my (Gordon's) setup the tests would get *very*
slow as time went on, and they //appear// to be faster when I shut down
and start up the browser over and over after only a small number of
tests have occurred.

version 20080619_1
Luke Closs pointed me to universaleditbutton.org, which is a compelling idea.
Added application/wiki links in the <head>, but then realized that I'd never
gotten around to adding application/rss+xml links to <head>, so did that too.
Also decided to update my in-code tags to my standard [tag:some_tag:gem]
format.
Also added the is_last_test option to each test, to be able to short
circuit the tests if you really only need to run a section of them.

version 20080618_1
Updated the path to the Selenium Remote Control server so that it
would run the version that controls Firefox 3.  Firefox 3 passes
all tests.

version 20080617_1
Changed the Selenium test file again.  Now uses an array of hash
references for the tests.

version 20080613_1
Updated the Selenium test file to use a new format.  Each "story" is